@@ -1,5 +1,7 @@
-<tal:block tal:define="dummy python: context.REQUEST.RESPONSE.setHeader('Content-Type', 'text/xml;;charset=UTF-8')" /><?xml version="1.0" encoding="utf-8"?>
-<feed xmlns="http://www.w3.org/2005/Atom" tal:define="data view/get_data">
+<?xml version="1.0" encoding="utf-8"?>
+<feed xmlns="http://www.w3.org/2005/Atom"
+  xmlns:tal="http://xml.zope.org/namespaces/tal"
+  tal:define="data view/get_data">
   <id tal:content="data/id" />
   <title type="text" tal:content="data/title"/>
   <subtitle tal:content="data/description" />
@@ -7,13 +9,19 @@
   <author tal:repeat="author data/authors">
     <name tal:content="author"/>
   </author>
-  <updated tal:content="data/date_updated" />
+  <tal:block condition="data/date_updated">
+    <updated tal:content="python: data['date_updated'].HTML4()" />
+  </tal:block>
   <entry tal:repeat="item data/entries">
     <title tal:content="item/title"/>
     <link rel="alternate" type="text/html" tal:attributes="href item/url" />
     <id tal:content="item/id"/>
-    <published tal:content="item/date_published"/>
-    <updated tal:content="item/date_updated"/>
+    <tal:block condition="item/date_published">
+      <published tal:content="python: item.date_published().HTML4()"/>
+    </tal:block>
+    <tal:block condition="item/date_updated">
+      <updated tal:content="python: item.date_updated().HTML4()"/>
+    </tal:block>
     <author tal:repeat="author item/authors">
       <name tal:content="author"/>
     </author>
@@ -21,7 +29,7 @@
       tal:repeat="keyword item/keywords"
       tal:attributes="term keyword" />
     <summary type="xhtml">
-      <div tal:content="structure item/description" />
+      <div tal:content="structure item/html_description" />
     </summary>
   </entry>
 </feed>
